--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "async": "^0.9.0",
     "i": "^0.3.3",
     "keypress": "^0.2.1",
+    "lodash": "^3.7.0",
     "node-core-audio": "^0.4.1",
     "rpio": "^0.4.3",
     "speaker": "^0.2.4",
