--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "i": "^0.3.3",
     "jspack": "0.0.4",
     "keypress": "^0.2.1",
-    "lodash": "^3.7.0",
+    "lodash": ">=4.17.5",
     "node-core-audio": "^0.4.1",
     "rpio": "^0.4.3",
     "speaker": "^0.2.4",
